--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -92,7 +92,12 @@
     </div>
     <script>
         window.addEventListener('load', () => {
-            const savedMode = localStorage.getItem('linkmode');
+            let savedMode = localStorage.getItem('linkmode');
+            const patterns = ['configure', 'overview'];
+            if (patterns.some(pattern => document.referrer.includes(pattern))) {
+                savedMode = 'configure';
+                console.log('linkmode reset');
+            }
             if (savedMode) {
                 document.querySelector(`input[name="mode"][value="${savedMode}"]`).checked = true;
             }
@@ -104,7 +109,7 @@
             const links = document.querySelectorAll('.entity-link');
             links.forEach(link => {
                 let url = link.getAttribute('href');
-                if (mode === "lookup") {
+                if (mode === 'lookup') {
                     link.setAttribute('href', url.replace('/configure/', '/lookup/'));
                 } else {
                     link.setAttribute('href', url.replace('/lookup/', '/configure/'));
